Add missing keys

--- a/features/text-decoration.yml
+++ b/features/text-decoration.yml
@@ -22,6 +22,10 @@ compat_features:
   - css.properties.text-decoration-skip.auto
   - css.properties.text-decoration-skip.none
   - css.properties.text-decoration-style
+  - css.properties.text-decoration-style.wavy
   - css.properties.text-decoration-thickness
   - css.properties.text-decoration-thickness.auto
   - css.properties.text-decoration-thickness.from-font
+  - css.properties.text-decoration-thickness.percentage
+  - css.properties.text-decoration.includes_color-and-style
+  - css.properties.text-decoration.includes_thickness
