--- a/features/text-decoration.yml.dist
+++ b/features/text-decoration.yml.dist
@@ -42,6 +42,7 @@ compat_features:
   - css.properties.text-decoration-color
   - css.properties.text-decoration-line
   - css.properties.text-decoration-style
+  - css.properties.text-decoration-style.wavy
 
   # baseline: high
   # baseline_low_date: 2020-07-28
@@ -88,6 +89,36 @@ compat_features:
   - css.properties.text-decoration-skip-ink
   - css.properties.text-decoration-skip-ink.auto
   - css.properties.text-decoration-skip-ink.none
+
+  # baseline: low
+  # baseline_low_date: 2024-03-05
+  # support:
+  #   chrome: "89"
+  #   chrome_android: "89"
+  #   edge: "89"
+  #   firefox: "74"
+  #   firefox_android: "79"
+  #   safari: "17.4"
+  #   safari_ios: "17.4"
+  - css.properties.text-decoration-thickness.percentage
+
+  # baseline: false
+  # support:
+  #   chrome: "57"
+  #   chrome_android: "57"
+  #   edge: "79"
+  #   firefox: "6"
+  #   firefox_android: "6"
+  - css.properties.text-decoration.includes_color-and-style
+
+  # baseline: false
+  # support:
+  #   chrome: "87"
+  #   chrome_android: "87"
+  #   edge: "87"
+  #   firefox: "70"
+  #   firefox_android: "79"
+  - css.properties.text-decoration.includes_thickness
 
   # baseline: false
   # support:
