--- a/features/text-transform.yml
+++ b/features/text-transform.yml
@@ -7,8 +7,13 @@ status:
 compat_features:
   - css.properties.text-transform
   - css.properties.text-transform.capitalize
+  - css.properties.text-transform.dutch_ij_digraph
   - css.properties.text-transform.full-size-kana
   - css.properties.text-transform.full-width
+  - css.properties.text-transform.greek_accented_characters
   - css.properties.text-transform.lowercase
+  - css.properties.text-transform.lowercase_sigma
   - css.properties.text-transform.none
+  - css.properties.text-transform.turkic_is
   - css.properties.text-transform.uppercase
+  - css.properties.text-transform.uppercase_eszett
