--- a/features/text-transform.yml.dist
+++ b/features/text-transform.yml.dist
@@ -32,6 +32,54 @@ compat_features:
   - css.properties.text-transform.none
   - css.properties.text-transform.uppercase
 
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "30"
+  #   chrome_android: "30"
+  #   edge: "12"
+  #   firefox: "14"
+  #   firefox_android: "14"
+  #   safari: "6"
+  #   safari_ios: "6"
+  - css.properties.text-transform.lowercase_sigma
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "31"
+  #   chrome_android: "31"
+  #   edge: "12"
+  #   firefox: "14"
+  #   firefox_android: "14"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - css.properties.text-transform.turkic_is
+
+  # baseline: high
+  # baseline_low_date: 2018-10-02
+  # baseline_high_date: 2021-04-02
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "18"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - css.properties.text-transform.uppercase_eszett
+
+  # baseline: false
+  # support:
+  #   chrome: "34"
+  #   chrome_android: "34"
+  #   edge: "79"
+  #   firefox: "15"
+  #   firefox_android: "15"
+  - css.properties.text-transform.greek_accented_characters
+
   # baseline: false
   # support:
   #   firefox: "19"
@@ -47,3 +95,9 @@ compat_features:
   #   safari: "17"
   #   safari_ios: "17"
   - css.properties.text-transform.full-size-kana
+
+  # baseline: false
+  # support:
+  #   firefox: "14"
+  #   firefox_android: "14"
+  - css.properties.text-transform.dutch_ij_digraph
