update text underline position

--- a/features/text-underline-position.yml
+++ b/features/text-underline-position.yml
@@ -1,6 +1,7 @@
-name: Text underline
-description: "The `text-underline-offset` and  `text-underline-position` CSS properties set the position of the underline on text with `text-decoration: underline`."
+name: Text underline position
+description: "The `text-underline-position` and `text-underline-offset` CSS properties set the position and distance from initial position of text underlines on text with `text-decoration: underline`."
 spec: https://drafts.csswg.org/css-text-decor-4/#line-decoration
+group: text
 status:
   compute_from: css.properties.text-underline-position
 compat_features:
@@ -12,4 +13,3 @@ compat_features:
   - css.properties.text-underline-position.left
   - css.properties.text-underline-position.right
   - css.properties.text-underline-position.under
-  
