--- a/features/overflow-anchor.yml
+++ b/features/overflow-anchor.yml
@@ -1,5 +1,5 @@
 name: overflow-anchor
-description: The `overflow-anchor` CSS property sets the eligibility of an element to be a scroll anchor, reducing unintended scrolling when document changes occur above the current scrollport. This is enabled by default where supported.
+description: The `overflow-anchor` CSS property sets an element as a possible scroll anchor, reducing unintended scrolling when document changes occur above the current scrollport. This is enabled by default where supported.
 spec: https://drafts.csswg.org/css-scroll-anchoring-1/#exclusion-api
 caniuse: css-overflow-anchor
 group: scrolling
