--- a/features/alignment-baseline.yml
+++ b/features/alignment-baseline.yml
@@ -1,4 +1,4 @@
-name: alignment-basline
+name: alignment-baseline
 description: The `alignment-baseline` CSS property sets which baseline of an element is aligned with the corresponding baseline of its parent.
 spec: https://drafts.csswg.org/css-inline-3/#alignment-baseline-property
 group: css
