--- a/features/xml-serializer.yml
+++ b/features/xml-serializer.yml
@@ -1,7 +1,9 @@
 name: XMLSerializer
 description: The `XMLSerializer` API provides the `serializeToString()` method to construct an XML string representing a DOM tree.
 spec: https://w3c.github.io/DOM-Parsing/#the-xmlserializer-interface
-group: parsing-and-serialization
+group:
+  - parsing-and-serialization
+  - xml
 compat_features:
   - api.XMLSerializer
   - api.XMLSerializer.XMLSerializer
