Add CSSOM and related features

--- a/features/import.yml
+++ b/features/import.yml
@@ -8,3 +8,5 @@ compat_features:
   - api.CSSImportRule.href
   - api.CSSImportRule.media
   - api.CSSImportRule.styleSheet
+  - api.CSSImportRule.supportsText
+  
