--- a/features/alignment-baseline.yml
+++ b/features/alignment-baseline.yml
@@ -4,3 +4,9 @@ spec: https://drafts.csswg.org/css-inline-3/#alignment-baseline-property
 group: css
 compat_features:
   - css.properties.alignment-baseline
+  - css.properties.alignment-baseline.alphabetic
+  - css.properties.alignment-baseline.baseline
+  - css.properties.alignment-baseline.central
+  - css.properties.alignment-baseline.ideographic
+  - css.properties.alignment-baseline.mathematical
+  - css.properties.alignment-baseline.middle
