--- a/features/line-height.yml
+++ b/features/line-height.yml
@@ -1,5 +1,5 @@
 name: line-height
-description: The `line-height` CSS property sets the spacing between baselines of flowed inline elements, such as text, oriented to the horizontal or vertical writing mode.
+description: The `line-height` CSS property sets the spacing between text baselines, oriented to the horizontal or vertical writing mode.
 spec: https://drafts.csswg.org/css-inline-3/#line-height-property
 group: css
 compat_features:
