--- a/features/dominant-baseline.yml
+++ b/features/dominant-baseline.yml
@@ -1,7 +1,7 @@
 name: dominant-baseline
 description: The `dominant-baseline` CSS property sets the specific baseline used to align an elements's text and inline-level contents.
 spec: https://drafts.csswg.org/css-inline-3/#dominant-baseline-property
-group: css
+group: text
 compat_features:
   - css.properties.dominant-baseline
   - css.properties.dominant-baseline.alphabetic
