--- a/features/baseline-shift.yml
+++ b/features/baseline-shift.yml
@@ -1,7 +1,7 @@
 name: baseline-shift
 description: The `baseline-shift` CSS property sets the position of an element relative to its dominant baseline.
 spec: https://drafts.csswg.org/css-inline-3/#baseline-shift-property
-group: css
+group: text
 compat_features:
   - css.properties.baseline-shift
   - css.properties.baseline-shift.baseline
