--- a/features/canvas-2d.yml
+++ b/features/canvas-2d.yml
@@ -7,6 +7,8 @@ status:
 compat_features:
   - api.CanvasGradient
   - api.CanvasGradient.addColorStop
+  - api.CanvasPattern
+  - api.CanvasPattern.setTransform
   - api.CanvasRenderingContext2D
   - api.CanvasRenderingContext2D.arc
   - api.CanvasRenderingContext2D.arcTo
