--- a/features/navigator.yml
+++ b/features/navigator.yml
@@ -3,3 +3,4 @@ description: "The `window.navigator` API represents the user agent and its state
 spec: https://html.spec.whatwg.org/multipage/system-state.html#the-navigator-object
 compat_features:
   - api.Navigator
+  - api.Window.navigator
