move bits over to history

--- a/features/history.yml
+++ b/features/history.yml
@@ -15,3 +15,5 @@ compat_features:
   - api.History.replaceState
   - api.History.scrollRestoration
   - api.History.state
+  - api.Window.history
+  - api.Window.popstate_event
