--- a/features/history.yml.dist
+++ b/features/history.yml.dist
@@ -30,6 +30,7 @@ compat_features:
   - api.History.forward
   - api.History.go
   - api.History.length
+  - api.Window.history
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: high
@@ -45,6 +46,19 @@ compat_features:
   #   safari_ios: "4"
   - api.History.pushState
   - api.History.replaceState
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "5"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "4"
+  #   firefox_android: "4"
+  #   safari: "5"
+  #   safari_ios: "4.2"
+  - api.Window.popstate_event
 
   # baseline: high
   # baseline_low_date: 2015-07-29
