--- a/features/view-transitions.yml
+++ b/features/view-transitions.yml
@@ -10,6 +10,8 @@ compat_features:
   - api.ViewTransition.ready
   - api.ViewTransition.skipTransition
   - api.ViewTransition.updateCallbackDone
+  - api.Window.pagereveal_event
+  - api.Window.pageswap_event
   - css.properties.view-transition-name
   - css.properties.view-transition-name.none
   - css.selectors.view-transition
