--- a/features/webgpu.yml.dist
+++ b/features/webgpu.yml.dist
@@ -3,8 +3,12 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "113"
+    chrome_android: "121"
+    edge: "113"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "113"
@@ -287,7 +291,6 @@ compat_features:
   - api.WGSLLanguageFeatures.size
   - api.WGSLLanguageFeatures.values
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
   - api.GPUCanvasContext.getConfiguration
