--- a/features/intl-locale-info.yml.dist
+++ b/features/intl-locale-info.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "130"
     chrome_android: "130"
+    edge: "130"
     safari: "17"
     safari_ios: "17"
 compat_features:
