--- a/features/text-wrap-style.yml.dist
+++ b/features/text-wrap-style.yml.dist
@@ -6,10 +6,12 @@ status:
   support:
     chrome: "130"
 compat_features:
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-10-17
   # support:
   #   chrome: "130"
   #   chrome_android: "130"
+  #   edge: "130"
   #   firefox: "124"
   #   firefox_android: "124"
   #   safari: "17.5"
