--- a/features/audio.yml.dist
+++ b/features/audio.yml.dist
@@ -28,7 +28,6 @@ compat_features:
   #   safari_ios: "3"
   - api.HTMLAudioElement
   - html.elements.audio
-  - html.elements.audio.autoplay
   - html.elements.audio.controls
   - html.elements.audio.src
 
@@ -96,3 +95,7 @@ compat_features:
   #   safari: "10"
   #   safari_ios: "10"
   - html.elements.audio.crossorigin
+
+  # baseline: false
+  # support: {}
+  - html.elements.audio.autoplay
