--- a/features/box-decoration-break.yml.dist
+++ b/features/box-decoration-break.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "130"
     chrome_android: "130"
+    edge: "130"
     firefox: "32"
     firefox_android: "32"
 compat_features:
