--- a/features/draft/spec/css-nesting-1.yml.dist
+++ b/features/draft/spec/css-nesting-1.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "130"
     chrome_android: "130"
+    edge: "130"
 compat_features:
   - api.CSSNestedDeclarations
   - api.CSSNestedDeclarations.style
