--- a/features/webgpu.yml
+++ b/features/webgpu.yml
@@ -1,5 +1,5 @@
 name: WebGPU
-description: The `navigator.gpu` API performs operations on such as rendering and computation on dedicated graphics hardware (also known as a Graphics Processing Unit).
+description: The `navigator.gpu` API performs operations such as rendering and computation on dedicated graphics hardware (also known as a Graphics Processing Unit).
 spec: https://gpuweb.github.io/gpuweb/
 caniuse: webgpu
 status:
