--- a/features/webgpu.yml
+++ b/features/webgpu.yml
@@ -1,7 +1,9 @@
-draft_date: 2024-10-17
 name: WebGPU
-description: TODO
+description: The `navigator.gpu` API performs operations such as rendering and computation on dedicated graphics hardware (also known as a Graphics Processing Unit).
 spec: https://gpuweb.github.io/gpuweb/
+caniuse: webgpu
+status:
+  compute_from: api.Navigator.gpu
 compat_features:
   - api.GPU
   - api.GPU.getPreferredCanvasFormat
