--- a/features/webgpu.yml.dist
+++ b/features/webgpu.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "113"
+    edge: "113"
 compat_features:
   # baseline: false
   # support:
@@ -265,6 +267,7 @@ compat_features:
   #   edge: "129"
   - api.GPUCanvasContext.configure.toneMapping
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "113"
@@ -287,7 +290,6 @@ compat_features:
   - api.WGSLLanguageFeatures.size
   - api.WGSLLanguageFeatures.values
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
   - api.GPUCanvasContext.getConfiguration
