--- a/features/layout-direction-override.yml
+++ b/features/layout-direction-override.yml
@@ -1,8 +1,9 @@
-name: Bidirectional override
-description: The `unicode-bidi` and `direction` CSS properties override the Unicode layout algorithm in non-HTML documents. Authors should use the `dir` global HTML attribute instead.
+name: Layout direction override
+description: The `unicode-bidi` and `direction` CSS properties override the Unicode layout algorithm. For HTML documents, authors should use the `dir` global HTML attribute and `<bdo>` HTML element instead.
 spec:
   - https://drafts.csswg.org/css-writing-modes-4/#direction
   - https://drafts.csswg.org/css-writing-modes-4/#unicode-bidi
+group: css
 compat_features:
   - css.properties.unicode-bidi
   - css.properties.unicode-bidi.bidi-override
