--- a/features/object-position.yml
+++ b/features/object-position.yml
@@ -1,11 +1,9 @@
 name: object-position
-# TODO: Remove iframe support note once that is no longer the case.
-description: The `object-position` CSS property places images, videos, and other replaced elements within their boxes. Support for `<iframe>` elements is behind other elements.
+description: The `object-position` CSS property places images, videos, and other replaced elements within their boxes.
 spec: https://drafts.csswg.org/css-images-3/#the-object-position
 # object-fit on caniuse includes both object-fit and object-position.
 # `caniuse: object-fit` is set in object-fit.yml
-status:
-  compute_from: css.properties.object-position
 compat_features:
   - css.properties.object-position
-  - css.properties.object-position.applies_to_iframe_elements
+  # TODO: Compat data is unclear on which elements are supported, and needs to be resolved upstream in https://github.com/mdn/browser-compat-data/issues/23586.
+  # css.properties.object-position.applies_to_iframe_elements
