--- a/features/element-timing.yml
+++ b/features/element-timing.yml
@@ -1,5 +1,5 @@
 name: Element timing
-description: The `PerformanceElementTiming` interface contains render timing information for image and text node elements the developer annotated with an `elementtiming` attribute for observation.
+description: The `element` performance entry and the `PerformanceElementTiming` API measures the time to render elements that have the  `elementtiming` attribute.
 spec: https://wicg.github.io/element-timing/
 group: performance
 compat_features:
