--- a/features/event-timing.yml
+++ b/features/event-timing.yml
@@ -1,5 +1,5 @@
 name: Event timing
-description: TODO
+description: The `event` and `first-input` performance entries and the `PerformanceEventTiming` API measures the latency of user input events, such as mouse clicks or keypresses, and the latency of the first user input. First Input Delay (FID) is a common metric for perceived responsiveness.
 spec: https://w3c.github.io/event-timing/
 group: performance
 status:
