--- a/features/largest-contentful-paint.yml
+++ b/features/largest-contentful-paint.yml
@@ -1,5 +1,5 @@
 name: Largest contentful paint (LCP)
-description: The `LargestContentfulPaint` interface provides timing information about the largest image or text paint before user input on a web page. The key moment this API provides is known as the LCP metric.
+description: The `largest-contentful-paint` performance entry and the `LargestContentfulPaint` API measures  the time it takes for the largest image or text to appear. Largest contentful paint (LCP) is a common metric for perceived loading times.
 spec: https://w3c.github.io/largest-contentful-paint/
 group: performance
 compat_features:
