--- a/features/layout-instability.yml
+++ b/features/layout-instability.yml
@@ -1,5 +1,5 @@
 name: Layout instability
-description: The `LayoutShift` interface provides a way to measure and report on the layout stability of web pages based on movements of the elements on the page.
+description: The `layout-shift` performance entry and `LayoutShift` API measures the layout stability of web pages based on movements of the elements on the page.
 spec: https://wicg.github.io/layout-instability/
 group: performance
 compat_features:
