--- a/features/navigation-timing.yml
+++ b/features/navigation-timing.yml
@@ -1,5 +1,5 @@
 name: Navigation timing
-description: The `PerformanceNavigationTiming` interface provides methods and properties to store and retrieve metrics regarding the browser's document navigation events.
+description: The `navigation` performance entry and the `PerformanceNavigationTiming` API measures navigation events, such as loading time or the number of redirects.
 spec: https://w3c.github.io/navigation-timing/
 group: performance
 status:
