--- a/features/longtasks.yml
+++ b/features/longtasks.yml
@@ -1,5 +1,5 @@
 name: Long tasks
-description: The `PerformanceLongTaskTiming` interface provides information about tasks that occupy the UI thread for 50 milliseconds or more.
+description: The `longtask` performance event type and the `PerformanceLongTaskTiming` API provides information about tasks that occupy the UI thread for 50 milliseconds or more, a metric for input latency, delayed animations, and other sources of "jank."```
 spec: https://w3c.github.io/longtasks/
 group: performance
 compat_features:
