--- a/features/measure-memory.yml
+++ b/features/measure-memory.yml
@@ -1,5 +1,5 @@
 name: Memory measurement
-description: The `measureUserAgentSpecificMemory()` method is used to estimate the memory usage of a web application including all its iframes and workers.
+description: The `measureUserAgentSpecificMemory()` method estimates the memory usage of a web application including all its iframes and workers.
 spec: https://wicg.github.io/performance-measure-memory/
 group: performance
 compat_features:
