--- a/features/paint-timing.yml
+++ b/features/paint-timing.yml
@@ -1,5 +1,5 @@
 name: Paint timing
-description: The `PerformancePaintTiming` interface provides timing information about "paint" (also called "render") operations during web page construction. The key moments this API provides are known as the First Paint (FP) and First Contentful Paint (FCP) metrics.
+description: The `paint` performance entry and the `PerformancePaintTiming` API measures the duration of "paint" (also called "render") operations as a page loads. The API measures the time to First Paint (FP) and First Contentful Paint (FCP), common metrics for perceived loading times.
 spec: https://w3c.github.io/paint-timing/
 group: performance
 compat_features:
