--- a/features/performance.yml
+++ b/features/performance.yml
@@ -1,5 +1,5 @@
 name: Performance
-description: The global `performance` property and the `Performance` interface provide access to performance-related information for the current execution context.
+description: The `performance` global object and the `Performance` API provide access to performance-related information for the current execution context.
 spec:
   - https://w3c.github.io/hr-time/
   - https://w3c.github.io/performance-timeline/
