--- a/features/image-function.yml
+++ b/features/image-function.yml
@@ -1,5 +1,5 @@
 name: image()
-description: The `image()` CSS function creates an image similar to `url()`, but with additional functionality. It can create a solid color as an image, provide a fallback from an image URL to a solid color, or clip a sprite image using media fragments.
+description: The `image()` CSS function creates an image similar to `url()` but with additional functionality. It can create a solid color as an image, provide a fallback from an image URL to a solid color, or clip a sprite image using media fragments. Not to be confused with the `Image()` constructor.
 spec: https://drafts.csswg.org/css-images-4/#image-notation
 group: images
 compat_features:
