--- a/features/page-visibility.yml.dist
+++ b/features/page-visibility.yml.dist
@@ -3,17 +3,18 @@
 
 status:
   baseline: high
-  baseline_low_date: 2021-04-26
-  baseline_high_date: 2023-10-26
+  baseline_low_date: 2015-07-29
+  baseline_high_date: 2018-01-29
   support:
-    chrome: "62"
-    chrome_android: "62"
-    edge: "18"
-    firefox: "56"
-    firefox_android: "56"
-    safari: "14.1"
-    safari_ios: "14.5"
+    chrome: "33"
+    chrome_android: "33"
+    edge: "12"
+    firefox: "18"
+    firefox_android: "18"
+    safari: "7"
+    safari_ios: "7"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
@@ -25,9 +26,9 @@ compat_features:
   #   firefox_android: "18"
   #   safari: "7"
   #   safari_ios: "7"
+  - api.Document.hidden
   - api.Document.visibilityState
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2021-04-26
   # baseline_high_date: 2023-10-26
