--- a/features/selection-api.yml
+++ b/features/selection-api.yml
@@ -9,8 +9,44 @@ status:
     - api.Window.getSelection
     - api.Document.selectionchange_event
 compat_features:
+  - api.AbstractRange
+  - api.AbstractRange.collapsed
+  - api.AbstractRange.endContainer
+  - api.AbstractRange.endOffset
+  - api.AbstractRange.startContainer
+  - api.AbstractRange.startOffset
+  - api.Document.createRange
   - api.Document.getSelection
   - api.Document.selectionchange_event
+  - api.Range
+  - api.Range.Range
+  - api.Range.cloneContents
+  - api.Range.cloneRange
+  - api.Range.collapse
+  - api.Range.collapsed
+  - api.Range.commonAncestorContainer
+  - api.Range.compareBoundaryPoints
+  - api.Range.comparePoint
+  - api.Range.deleteContents
+  - api.Range.detach
+  - api.Range.endContainer
+  - api.Range.endOffset
+  - api.Range.extractContents
+  - api.Range.insertNode
+  - api.Range.intersectsNode
+  - api.Range.isPointInRange
+  - api.Range.selectNode
+  - api.Range.selectNodeContents
+  - api.Range.setEnd
+  - api.Range.setEndAfter
+  - api.Range.setEndBefore
+  - api.Range.setStart
+  - api.Range.setStartAfter
+  - api.Range.setStartBefore
+  - api.Range.startContainer
+  - api.Range.startOffset
+  - api.Range.surroundContents
+  - api.Range.toString
   - api.Selection
   - api.Selection.addRange
   - api.Selection.anchorNode
@@ -56,3 +92,11 @@ compat_features:
   # removeRange is baseline low because it was only added in Safari 17.
   # Maybe split into a separate feature.
   - api.Selection.removeRange
+
+  - api.StaticRange
+  - api.StaticRange.StaticRange
+  - api.StaticRange.collapsed
+  - api.StaticRange.endContainer
+  - api.StaticRange.endOffset
+  - api.StaticRange.startContainer
+  - api.StaticRange.startOffset
