--- a/features/selection-api.yml.dist
+++ b/features/selection-api.yml.dist
@@ -25,6 +25,31 @@ compat_features:
   #   firefox_android: "4"
   #   safari: "1"
   #   safari_ios: "1"
+  - api.Document.createRange
+  - api.Range
+  - api.Range.cloneContents
+  - api.Range.cloneRange
+  - api.Range.collapse
+  - api.Range.collapsed
+  - api.Range.commonAncestorContainer
+  - api.Range.compareBoundaryPoints
+  - api.Range.deleteContents
+  - api.Range.endContainer
+  - api.Range.endOffset
+  - api.Range.extractContents
+  - api.Range.insertNode
+  - api.Range.selectNode
+  - api.Range.selectNodeContents
+  - api.Range.setEnd
+  - api.Range.setEndAfter
+  - api.Range.setEndBefore
+  - api.Range.setStart
+  - api.Range.setStartAfter
+  - api.Range.setStartBefore
+  - api.Range.startContainer
+  - api.Range.startOffset
+  - api.Range.surroundContents
+  - api.Range.toString
   - api.Window.getSelection
 
   # baseline: high
@@ -109,6 +134,32 @@ compat_features:
   - api.Document.selectionchange_event
 
   # baseline: high
+  # baseline_low_date: 2017-04-05
+  # baseline_high_date: 2019-10-05
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "15"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "1"
+  - api.Range.isPointInRange
+
+  # baseline: high
+  # baseline_low_date: 2017-04-05
+  # baseline_high_date: 2019-10-05
+  # support:
+  #   chrome: "29"
+  #   chrome_android: "29"
+  #   edge: "15"
+  #   firefox: "24"
+  #   firefox_android: "24"
+  #   safari: "8"
+  #   safari_ios: "8"
+  - api.Range.Range
+
+  # baseline: high
   # baseline_low_date: 2017-04-19
   # baseline_high_date: 2019-10-19
   # support:
@@ -161,6 +212,32 @@ compat_features:
   - api.Selection.type
 
   # baseline: high
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "17"
+  #   firefox: "1"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "1"
+  - api.Range.comparePoint
+
+  # baseline: high
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "17"
+  #   firefox: "17"
+  #   firefox_android: "19"
+  #   safari: "3"
+  #   safari_ios: "1"
+  - api.Range.intersectsNode
+
+  # baseline: high
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
@@ -172,6 +249,55 @@ compat_features:
   #   safari: "1.3"
   #   safari_ios: "1"
   - api.Selection.modify
+
+  # baseline: high
+  # baseline_low_date: 2020-07-28
+  # baseline_high_date: 2023-01-28
+  # support:
+  #   chrome: "60"
+  #   chrome_android: "60"
+  #   edge: "18"
+  #   firefox: "69"
+  #   firefox_android: "79"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - api.StaticRange
+  - api.StaticRange.collapsed
+  - api.StaticRange.endContainer
+  - api.StaticRange.endOffset
+  - api.StaticRange.startContainer
+  - api.StaticRange.startOffset
+
+  # baseline: high
+  # baseline_low_date: 2021-04-15
+  # baseline_high_date: 2023-10-15
+  # support:
+  #   chrome: "90"
+  #   chrome_android: "90"
+  #   edge: "90"
+  #   firefox: "71"
+  #   firefox_android: "79"
+  #   safari: "13.1"
+  #   safari_ios: "13.4"
+  - api.StaticRange.StaticRange
+
+  # baseline: high
+  # baseline_low_date: 2021-04-26
+  # baseline_high_date: 2023-10-26
+  # support:
+  #   chrome: "90"
+  #   chrome_android: "90"
+  #   edge: "90"
+  #   firefox: "69"
+  #   firefox_android: "79"
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - api.AbstractRange
+  - api.AbstractRange.collapsed
+  - api.AbstractRange.endContainer
+  - api.AbstractRange.endOffset
+  - api.AbstractRange.startContainer
+  - api.AbstractRange.startOffset
 
   # baseline: low
   # baseline_low_date: 2023-09-18
@@ -194,6 +320,15 @@ compat_features:
   #   firefox_android: "52"
   #   safari: "1.3"
   - api.Node.selectstart_event
+
+  # baseline: false
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - api.Range.detach
 
   # baseline: false
   # support:
