--- a/features/wasm-simd-relaxed.yml
+++ b/features/wasm-simd-relaxed.yml
@@ -1,4 +1,4 @@
-name: WebAssembly SIMD (relaxed width)
+name: WebAssembly relaxed width SIMD
 description: An extension to WebAssembly adding relaxed SIMD (Single Instruction Multiple Data) introducing local non-determinism (where the results of the instructions may vary based on hardware support).
 spec: https://webassembly.github.io/spec/core/bikeshed/#vector-instructions
 compat_features:
