--- a/features/wasm-tail-call-optimization.yml
+++ b/features/wasm-tail-call-optimization.yml
@@ -1,4 +1,4 @@
-name: WebAssembly tail calls
+name: WebAssembly tail call optimization
 description: An extension to WebAssembly to optimize tail calls by discarding the caller frame and replacing the call with a jump.
 spec: https://webassembly.github.io/gc/core/bikeshed/
 compat_features:
