--- a/features/wasm-sign-extension-operators.yml.dist
+++ b/features/wasm-sign-extension-operators.yml.dist
@@ -6,11 +6,11 @@ status:
   baseline_low_date: 2021-04-26
   baseline_high_date: 2023-10-26
   support:
-    chrome: ≤80
-    chrome_android: "80"
-    edge: ≤80
-    firefox: ≤72
-    firefox_android: "79"
+    chrome: "69"
+    chrome_android: "69"
+    edge: "18"
+    firefox: "62"
+    firefox_android: "62"
     safari: "14.1"
     safari_ios: "14.5"
 compat_features:
