--- a/features/wasm-non-trapping-float-to-int.yml.dist
+++ b/features/wasm-non-trapping-float-to-int.yml.dist
@@ -6,11 +6,11 @@ status:
   baseline_low_date: 2021-10-25
   baseline_high_date: 2024-04-25
   support:
-    chrome: ≤80
-    chrome_android: "80"
-    edge: ≤80
-    firefox: ≤72
-    firefox_android: "79"
+    chrome: "75"
+    chrome_android: "75"
+    edge: "18"
+    firefox: "64"
+    firefox_android: "64"
     safari: "15.1"
     safari_ios: "15.1"
 compat_features:
